--- a/kn/firefox-ios.xliff
+++ b/kn/firefox-ios.xliff
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?><xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 http://docs.oasis-open.org/xliff/v1.2/os/xliff-core-1.2-strict.xsd">
   <file original="Client/en.lproj/InfoPlist.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="NSCameraUsageDescription" xml:space="preserve">
@@ -47,7 +47,7 @@
   </file>
   <file original="Shared/en.lproj/3DTouchActions.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Add to Bookmarks" xml:space="preserve">
@@ -93,7 +93,7 @@
   </file>
   <file original="Shared/en.lproj/AuthenticationManager.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="After 1 hour" xml:space="preserve">
@@ -250,7 +250,7 @@
   </file>
   <file original="Shared/en.lproj/ClearHistoryConfirm.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Cancel" xml:space="preserve">
@@ -271,7 +271,7 @@
   </file>
   <file original="Shared/en.lproj/ClearPrivateData.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Browsing History" xml:space="preserve">
@@ -312,7 +312,7 @@
   </file>
   <file original="Shared/en.lproj/ClearPrivateDataConfirm.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Cancel" xml:space="preserve">
@@ -333,7 +333,7 @@
   </file>
   <file original="Shared/en.lproj/Default Browser.strings" datatype="plaintext" source-language="en" target-language="kn">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="DefaultBrowserCard.Button" xml:space="preserve">
@@ -380,7 +380,7 @@
   </file>
   <file original="Shared/en.lproj/ErrorPages.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Open in Safari" xml:space="preserve">
@@ -397,7 +397,7 @@
   </file>
   <file original="Shared/en.lproj/FindInPage.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Done" xml:space="preserve">
@@ -424,7 +424,7 @@
   </file>
   <file original="Shared/en.lproj/HistoryPanel.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Delete" xml:space="preserve">
@@ -436,7 +436,7 @@
   </file>
   <file original="Shared/en.lproj/Intro.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Intro.Slides.Automatic.Privacy.Description" xml:space="preserve">
@@ -539,7 +539,7 @@
   </file>
   <file original="Shared/en.lproj/Localizable.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="+" xml:space="preserve">
@@ -3762,7 +3762,7 @@
   </file>
   <file original="Shared/en.lproj/LoginManager.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Are you sure?" xml:space="preserve">
@@ -3870,7 +3870,7 @@
   </file>
   <file original="Shared/en.lproj/Menu.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Menu.AddBookmarkAction.Title" xml:space="preserve">
@@ -4019,7 +4019,7 @@
   </file>
   <file original="Shared/en.lproj/PrivateBrowsing.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Close Private Tabs" xml:space="preserve">
@@ -4072,7 +4072,7 @@
   </file>
   <file original="Shared/en.lproj/Search.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="%@ search" xml:space="preserve">
@@ -4094,7 +4094,7 @@
   </file>
   <file original="Shared/en.lproj/Shared.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="%@ on %@" xml:space="preserve">
@@ -4106,7 +4106,7 @@
   </file>
   <file original="Shared/en.lproj/Storage.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Bookmarks Menu" xml:space="preserve">
@@ -4133,7 +4133,7 @@
   </file>
   <file original="Shared/en.lproj/Today.strings" source-language="en" target-language="kn" datatype="plaintext">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="TodayWidget.ClosePrivateTabsButton" xml:space="preserve">
@@ -4332,7 +4332,7 @@ Private Tab</source>
   </file>
   <file original="Shared/Supporting Files/en.lproj/BookmarkPanel.strings" datatype="plaintext" source-language="en" target-language="kn">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Delete" xml:space="preserve">
@@ -4343,7 +4343,7 @@ Private Tab</source>
   </file>
   <file original="Shared/Supporting Files/en.lproj/BookmarkPanelDeleteConfirm.strings" datatype="plaintext" source-language="en" target-language="kn">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Bookmarks.DeleteFolderWarning.CancelButton.Label" xml:space="preserve">
@@ -4366,7 +4366,7 @@ Private Tab</source>
   </file>
   <file original="WidgetKit/Base.lproj/WidgetIntents.intentdefinition" datatype="plaintext" source-language="en" target-language="kn">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="2GqvPe" xml:space="preserve">
@@ -4437,7 +4437,7 @@ Private Tab</source>
   </file>
   <file original="WidgetKit/en.lproj/Localizable.strings" datatype="plaintext" source-language="en" target-language="kn">
     <header>
-      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.0" build-num="13A233"/>
+      <tool tool-id="com.apple.dt.xcode" tool-name="Xcode" tool-version="13.1" build-num="13A1030d"/>
     </header>
     <body>
       <trans-unit id="Open Firefox" xml:space="preserve">
